--- a/pipelineAgent.yaml
+++ b/pipelineAgent.yaml
@@ -30,3 +30,37 @@ spec:
         items:
           - key: .dockerconfigjson
             path: config.json
+
+  # steps to create kubernetes and dockerhub credentials
+
+  #                    Kubernetes
+  # 1. Go to manage jenkins > manage credentials > jenkins > global credentials > add credentials.
+  # 2. Choose kind "secret file"
+  # 3. cat /home/(your user name)/.kube/config
+  #    this config file contains the credentials to run kubectl commands on your cluster.
+  # 4. upload this config file to the "secret file" in jenkins.
+  # 5. give the id, but make sure the id inside withcredential in Kubernetes deploy stage block
+  #    inside jenkins pipeline must be same,
+
+  #    withCredentials([file(credentialsId: '<your credential id>', variable: '<variable name here>')])
+  #    for e.g,
+  #    withCredentials([file(credentialsId: 'configID', variable: 'KUBECONFIG')])
+
+  #                    DockerHub
+  # Important note: add dockerhub secret inside jenkins namespace
+  # run following command in your kubernetes cluster to create a secret that contains your docker credentials.
+  # reference: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
+
+  # kubectl create secret docker-registry <secret name> --docker-server=<your-registry-server> /
+  # --docker-username=<your-name> --docker-password=<your-pword> --docker-email=<your-email> -n jenkins
+
+  # <your-registry-server> is your Private Docker Registry FQDN.
+  # (Use https://index.docker.io/v1/ for DockerHub.) registry server for acr will be different
+  # every registry has a different registry server url.
+  # <your-name> is your Docker username.
+  # <your-pword> is your Docker password.
+  # <your-email> is your Docker email.
+
+  # for e.g,
+  # kubectl create secret docker-registry regcred --docker-server=https://index.docker.io/v1/ \
+  # --docker-username=<your-name> --docker-password=<your-pword> --docker-email=<your-email> -n jenkins
