--- a/nginx.yaml
+++ b/nginx.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: nginx
-          image: tashikmoin/nginx-deployment-k8cd:latest
+          image: tashikmoin/nginx-deployment-k8cd
           ports:
             - containerPort: 80
