--- a/nginx.yaml
+++ b/nginx.yaml
@@ -3,6 +3,11 @@ kind: Deployment
 metadata:
   name: nginx-deployment
 spec:
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 0
+      maxSurge: 3
   replicas: 3
   selector:
     matchLabels:
